I have added responsivity of the news links, to make sure that they are in proper arrangement in the card, and they are all aligned in a same position even if the contents length change

--- a/src/componets/NewsArticles.css
+++ b/src/componets/NewsArticles.css
@@ -10,10 +10,15 @@
     border-radius: 5px;
     background-color: rgba(250, 235, 215, 0.186);
     padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .card-content {
     padding: 10px;
+    height: 300px;
+    height: 100%;
+    flex-grow: 1;
 }
 
 .card-content p {
@@ -27,6 +32,10 @@
     padding: 4px;
     border-radius: 50px;
     color: yellow;
+}
+
+.news-link {
+    margin-top: auto;
 }
 
 .news-img {
@@ -44,7 +53,7 @@
     }
 
     .news-img {
-        height: 100px;
+        min-height: 200px;
     }
 
     .news-card a {
